a few steps into duckdb database as a ducklake file format (experiment)